--- a/DatingApp.API/DatingApp.API.csproj
+++ b/DatingApp.API/DatingApp.API.csproj
@@ -9,6 +9,8 @@
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.6"/>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="3.1.0"/>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="2.4.0"/>
+    <PackageReference Include="CloudinaryDotNet" Version="1.3.0"/>
+    <PackageReference Include="Newtonsoft.Json" Version="11.0.2"/>
   </ItemGroup>
   <ItemGroup>
     <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="2.0.3"/>
