--- a/DatingApp.API/appsettings.json
+++ b/DatingApp.API/appsettings.json
@@ -17,5 +17,10 @@
 				"Default": "Warning"
 			}
 		}
+	},
+	"CloudinarySettings":{
+		"CloudName": "dqasvwn4n",
+		"ApiKey": "464914235397793",
+		"ApiSecret": "ys8GKI_Ls_Ky1HMXQYQd4oONUJU"
 	}
 }
