--- a/DatingApp.SPA/package.json
+++ b/DatingApp.SPA/package.json
@@ -31,6 +31,7 @@
     "ngx-bootstrap": "^2.0.3",
     "ngx-gallery": "^5.3.2",
     "rxjs": "^5.5.6",
+    "time-ago-pipe": "^1.3.2",
     "underscore": "^1.9.0",
     "zone.js": "^0.8.19"
   },
