Preparing version to publication

--- a/DatingApp.API/appsettings.json
+++ b/DatingApp.API/appsettings.json
@@ -3,7 +3,7 @@
 		"Token": "super secret key"
 	},
 	"ConnectionStrings": {
-		"DefaultConnection": "Data Source=DatingApp.db"
+		"DefaultConnection": "Server=localhost; Database=datingapp; Uid=root; Pwd=12345678"
 	},
 	"Logging": {
 		"IncludeScopes": false,
@@ -20,7 +20,7 @@
 	},
 	"CloudinarySettings":{
 		"CloudName": "dqasvwn4n",
-		"ApiKey": "464914235397793",
-		"ApiSecret": "ys8GKI_Ls_Ky1HMXQYQd4oONUJU"
+		"ApiKey": "**********************",
+		"ApiSecret": "**********************"
 	}
 }
