--- a/DatingApp.API/DatingApp.API.csproj
+++ b/DatingApp.API/DatingApp.API.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="2.4.0"/>
     <PackageReference Include="CloudinaryDotNet" Version="1.3.0"/>
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2"/>
+    <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="2.0.1"/>
   </ItemGroup>
   <ItemGroup>
     <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="2.0.3"/>
